microserv-parking/src/main/java/org/example/microservparking/error/exception/NotFoundIDException.java
package org.example.microservparking.error.exception;

public class NotFoundIDException extends RuntimeException{
    public NotFoundIDException(String message) {
        super(message);
    }
}
